# git-changes-view

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/git_changes_view/: __init__.py  cli.py  diff.py  output.py  tree.py
tests/: __init__.py  test_diff.py
